# hisi-riscv-hal

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  build.rs  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
api/: hisi-hal-0.7-stable.txt  hisi-riscv-hal-0.6-stable.txt
proptest-regressions/: sfc.txt  spi.txt  wdt.txt
scripts/: check-register-access.py  check-rename-api.sh  check-stable-api.sh
src/: asynch.rs  cache.rs  clock.rs  clock_init.rs  delay.rs  dma.rs  efuse.rs  embassy.rs  gadc.rs  gpio.rs  i2c.rs  i2c_v151.rs  i2s.rs  interrupt.rs  io_config.rs  keyscan.rs  km.rs  lib.rs  lsadc.rs  macros.rs  pdm.rs  peripherals.rs  pke.rs  prelude.rs  private.rs  pwm.rs  qdec.rs  rtc.rs  rtc_v150.rs  safety.rs  sfc.rs  software_interrupt.rs  spacc.rs  spi.rs  system.rs  tcxo.rs  time.rs  timer.rs  trng.rs  trng_v1.rs  (+5 more)
src/soc/: bs21.rs  mod.rs  ws63.rs
tests/: hil.rs
tests/hil/: clock.rs  dma.rs  efuse.rs  gadc.rs  gpio.rs  i2c.rs  i2s.rs  io_config_tests.rs  irq.rs  lsadc.rs  peripherals.rs  pwm.rs  rtc.rs  spi.rs  system.rs  tcxo.rs  timer.rs  trng.rs  tsensor.rs  uart.rs  wdt.rs
