[package]
name = "ws63-hal"
version = "0.2.1"
edition = "2024"
description = "Hardware Abstraction Layer for HiSilicon WS63 (RISC-V RV32IMFC_Zicsr)"
license = "MIT"
repository = "https://github.com/sanchuanhehe/ws63-hal"
keywords = ["ws63", "hisilicon", "riscv", "embedded", "hal"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
ws63-pac = { version = "0.1", features = ["critical-section", "rt"] }
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0"
# Async trait impls (interrupt + waker driven), gated behind the `async` feature.
embedded-hal-async = { version = "1.0", optional = true }
# embassy-time driver (feature `embassy`): WS63 becomes an embassy-time provider.
embassy-time-driver = { version = "0.2", optional = true }
embassy-time-queue-utils = { version = "0.3", optional = true, features = ["generic-queue-16"] }
embedded-io = "0.6"
nb = "1"
cfg-if = "1"
# The WS63 core has no atomic extension; on the no-atomic target portable-atomic
# uses a critical-section polyfill instead of native lr.w/sc.w (which would trap).
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }

critical-section = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
# Host unit tests (`cargo test --target x86_64`) compile the whole lib, including
# ws63-pac's `critical-section`-gated `Peripherals::take()`; pull a real
# critical-section impl (std) so the test binary links. Not in the firmware graph.
critical-section = { version = "1", features = ["std"] }

[features]
default = ["rt", "dep:critical-section"]
rt = ["ws63-pac/rt", "dep:critical-section"]
# `async`: interrupt + waker driven embedded-hal-async impls (DelayNs on a TIMER,
# digital::Wait on GPIO) + a minimal WFI `block_on`. Needs critical-section for
# the waker registry. Drivers do NOT auto-install ISRs — the app routes its trap
# to `timer::on_interrupt` / `gpio::on_interrupt` (see ws63-examples/async_delay),
# so enabling this feature never changes non-async firmware behaviour.
async = ["dep:embedded-hal-async", "dep:critical-section"]
# `embassy`: an embassy-time `Driver` for WS63 (now() from the TCXO 64-bit counter,
# alarms from a TIMER channel). Lets embassy-time (`Timer::after`, etc.) run on
# WS63 under embassy-executor. The app routes the alarm timer's trap to
# `embassy::on_alarm_interrupt` (see ws63-examples/embassy_multitask).
embassy = ["async", "dep:embassy-time-driver", "dep:embassy-time-queue-utils"]

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
opt-level = "s"

# Standalone builds (this repo's own CI) pull ws63-pac from crates.io, where the
# published version lags the generated PAC (e.g. missing KM registers / the host
# riscv-gating), breaking the build. Patch to the git PAC so standalone CI builds
# against the current source. IGNORED inside the ws63-rs workspace, whose root
# manifest patches ws63-pac to the local path (only the workspace-root [patch] applies).
[patch.crates-io]
ws63-pac = { git = "https://github.com/sanchuanhehe/ws63-pac" }
