[package]
name = "hisi-riscv-hal"
version = "0.6.0"
edition = "2024"
description = "Hardware Abstraction Layer for HiSilicon WS63 (RISC-V RV32IMFC_Zicsr)"
license = "MIT"
repository = "https://github.com/hispark-rs/hisi-riscv-hal"
keywords = ["ws63", "hisilicon", "riscv", "embedded", "hal"]
categories = ["embedded", "no-std", "hardware-support"]
# MSRV: edition 2024 requires >= 1.85; `instability = "0.3.12"` (the stable/unstable
# gating proc-macro, esp-hal's pattern) requires >= 1.88. The crate is built for the
# pinned custom `hisi-riscv` toolchain (1.96.0) and host-tested on CI stable; the MSRV
# may bump in a minor release, never a patch.
rust-version = "1.88"

# docs.rs: chip-ws63/chip-bs21 are mutually exclusive (a compile_error), so docs.rs
# cannot use --all-features. Pin one chip + the riscv target so the rendered docs
# match the firmware build (not docs.rs's default host target). `unstable` so the
# experimental surface is documented (marked "requires unstable" via the instability
# `doc(cfg)`). Mirrors esp-hal.
[package.metadata.docs.rs]
default-target = "riscv32imfc-unknown-none-elf"
features = ["chip-ws63", "rt", "async", "embassy", "unstable"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Exactly one PAC is linked, selected by the chip feature below. Optional so the
# inactive one is never compiled.
ws63-pac = { version = "0.2", default-features = false, features = ["critical-section"], optional = true }
bs2x-pac = { version = "0.1", default-features = false, features = ["critical-section"], optional = true }
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0"
# Owned-buffer DMA traits (`ReadBuffer`/`WriteBuffer`) for the `dma::Transfer` guard.
embedded-dma = "0.2"
# Async trait impls (interrupt + waker driven), gated behind the `async` feature.
embedded-hal-async = { version = "1.0", optional = true }
# 0.6 to match embedded-io 0.6 (the blocking impls' ErrorType); 0.7 would need embedded-io 0.7.
embedded-io-async = { version = "0.6", optional = true }
# embassy-time driver (feature `embassy`): WS63 becomes an embassy-time provider.
embassy-time-driver = { version = "0.2", optional = true }
embassy-time-queue-utils = { version = "0.3", optional = true, features = ["generic-queue-16"] }
embedded-io = "0.6"
nb = "1"
cfg-if = "1"
# The WS63 core has no atomic extension; on the no-atomic target portable-atomic
# uses a critical-section polyfill instead of native lr.w/sc.w (which would trap).
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }
# Stable/unstable API gating (esp-hal pattern): `#[instability::unstable]` soft-gates
# an item — `pub` when the `unstable` feature is on, `pub(crate)` + `#[allow(dead_code)]`
# when off. A build-time proc-macro (no runtime code); safe for no_std. MSRV 1.88.
instability = "0.3.12"

critical-section = { version = "1", optional = true }
# Optional on-target logging/format: every public Debug-deriving error/config type
# also derives `defmt::Format` behind this feature (esp-hal convention). No Display,
# no internal logging in hot paths.
defmt = { version = "0.3", optional = true }

# Host-only dev-deps: `proptest` (property tests in src/*.rs `#[cfg(test)]` unit
# tests) and the `std` critical-section impl. Gated to non-riscv so they are NOT
# compiled for the riscv `tests/hil.rs` build — proptest's transitive `once_cell`
# does not build on the no_std riscv target, and these are only needed by the
# host lib unit-test harness (`cargo test --target x86_64`), which compiles the
# whole lib incl. ws63-pac's `critical-section`-gated `Peripherals::take()`.
[target.'cfg(not(target_arch = "riscv32"))'.dev-dependencies]
proptest = "1"
critical-section = { version = "1", features = ["std"] }

# On-target (semihosting) integration tests (`tests/hil.rs`). These are RISC-V
# only — the test ELF is a no_std embedded-test binary flashed to a real WS63
# board by `probe-rs run` (see ../../hil/README.md, mirrors the tests-hil crate).
# Target-gated so the host unit-test build (`cargo test --target x86_64`) never
# pulls hisi-riscv-rt (whose startup asm doesn't assemble for the host) or the
# semihosting embedded-test harness — they live in the firmware graph only.
[target.'cfg(target_arch = "riscv32")'.dev-dependencies]
# embedded-test brings its own test harness + panic-handler + a `main` entry
# (exported as the C symbol `main`, which hisi-riscv-rt's runtime_init calls).
# Default features = ["semihosting", "panic-handler"] — exactly what the WS63
# semihosting test-report channel needs (validated on silicon 2026-06-14).
embedded-test = "0.7"
# Direct semihosting access for ad-hoc HIL diagnostics (semihosting::println!),
# same crate embedded-test pulls; `stdio` enables the print macros.
semihosting = { version = "0.1", features = ["stdio"] }
# Provides the `embedded-test.x` linker fragment on the link-search path so
# build.rs's `-Tembedded-test.x` resolves (lets embedded-test stay a dev-dep).
embedded-test-linker-script = "0.1"
# hisi-riscv-rt supplies the startup + reset vector + critical-section impl + the
# riscv-rt runtime that calls embedded-test's exported `main` (see tests/hil.rs),
# and — via the `boot-header` feature (turned on by this crate's chip-ws63
# feature) — the 0x300 HiSilicon image header that makes the test ELF bootable.
# default-features=false so the chip + boot-header + bundled-memory-x selection is
# driven by THIS crate's chip-* features (weak `hisi-riscv-rt?/...` pulls below),
# never linked into the firmware/host graph (this is a riscv-only dev-dep).
hisi-riscv-rt = { version = "0.5", default-features = false }
# The semihosting embedded-test harness needs a real critical-section impl in the
# graph; portable-atomic's RMW polyfill on this no-atomic core also routes through
# it (impl registered by hisi-riscv-rt). Mirrors tests-hil.
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }

[features]
default = ["rt", "dep:critical-section"]
# Chip selection (exactly one; enforced by a compile_error in lib.rs). Each pulls
# its Peripheral Access Crate.
#
# Each chip also pulls the matching hisi-riscv-rt features so the on-target
# `tests/hil.rs` test ELF gets the right runtime. `hisi-riscv-rt` is a riscv-only
# dev-dep (see the [target.'cfg(...)'.dev-dependencies] block below), so it is in
# the graph ONLY for the riscv test build — and a feature reference to a dep that
# isn't present in the current target's graph is simply ignored at resolution.
# Hence a host build (lib unit tests) or a plain library build, where rt is
# absent, does NOT drag in the runtime when `chip-ws63` is enabled; only the
# riscv test build sees these. Mirrors what tests-hil's chip features do.
#   - chip-ws63: rt's chip-ws63 + boot-header (0x300 image header @ flash 0x230000,
#     WS63-only) + bundled-memory-x (so ws63-link.x's `INCLUDE memory.x` resolves).
#   - chip-bs21: rt's chip-bs21 (BS21's app partition / header placement differs;
#     a BS21 board would supply its own memory.x — out of scope here). The whole
#     BS2X chip target is experimental and requires the `unstable` feature.
chip-ws63 = [
    "dep:ws63-pac",
    "hisi-riscv-rt/chip-ws63",
    "hisi-riscv-rt/boot-header",
    "hisi-riscv-rt/bundled-memory-x",
]
chip-bs21 = [
    "dep:bs2x-pac",
    "hisi-riscv-rt/chip-bs21",
]
# `rt`: riscv-rt integration. The weak `pac?/rt` enables the rt feature of whichever
# PAC is active (its device.x interrupt vectors), without forcing the inactive one.
rt = ["dep:critical-section", "ws63-pac?/rt", "bs2x-pac?/rt"]
# `async`: stable blocking-backed embedded-hal-async impls for SPI/I2C plus the
# optional async dependencies. Interrupt+waker helpers (`asynch::block_on`,
# GPIO Wait, TIMER DelayNs, UART async I/O, DMA/LSADC async hooks) additionally
# require `unstable` until their HIL and cancellation/lost-wake invariants close.
async = ["dep:embedded-hal-async", "dep:embedded-io-async", "dep:critical-section"]
# `embassy`: pulls the embassy-time dependencies. The public embassy-time driver
# module is still behind `unstable` (no end-to-end HIL yet): use
# `features = ["embassy", "unstable"]` to opt in.
#
# Deliberately does NOT enable `async`: the embassy-time driver only needs
# critical-section + the embassy-time crates, whereas `async` pulls the
# embedded-hal-async driver layer (`asynch`, per-driver `on_interrupt`) which is
# still chip-ws63-only. Keeping them separate lets `embassy` work on BS2X today
# (the time-driver's TCXO/TIMER access is register-identical across the family)
# without dragging in the WS63-only async drivers.
embassy = ["dep:critical-section", "dep:embassy-time-driver", "dep:embassy-time-queue-utils"]
# `hil-loopback`: opt-in HIL tests that need external jumper wiring on the board
# (the default HIL suite is self-contained / jumper-free). Enables the loopback
# tests in tests/hil.rs — GPIO0↔GPIO3, SPI0 GPIO9↔GPIO11, UART1 GPIO15↔GPIO16.
# Run with `--features chip-ws63,hil-loopback` on a board wired accordingly.
hil-loopback = []
# `defmt`: derive `defmt::Format` on the public error/config types (gated, additive).
defmt = ["dep:defmt"]
# `hil-rtc`: opt-in UNSTABLE HIL test for the RTC counter. OFF by default because the
# common WS63 EVB does not populate the RTC's 32.768 kHz crystal, so touching the
# RTC registers stalls the bus / drops the debug link. Enable only on a board that
# DOES populate the crystal: `--features chip-ws63,hil-rtc,unstable`.
hil-rtc = []
# `unstable`: opt-in to not-yet-HIL-proven surfaces (peripheral-DMA unproven subset,
# UartDma, embassy, untested WS63 drivers, and the entire BS2X chip target).
# `#[instability::unstable]` items are `pub` when this is on, `pub(crate)` when off
# (soft-gate, esp-hal pattern). OFF by default — enabling is consent to breakage in
# a minor release. Add to your Cargo.toml: `features = ["unstable"]`.
unstable = []

# On-target (semihosting) HIL integration test (RISC-V only; flashed to a real
# WS63 board by `probe-rs run`). embedded-test IS the harness — the default
# libtest harness would pull the std `test` crate (unavailable on this no_std
# target) and a duplicate panic handler. The HAL's own lib unit tests keep the
# default harness (host); only this integration test opts out. See tests/hil.rs.
[[test]]
name = "hil"
harness = false
